--- a/css/calendar.css
+++ b/css/calendar.css
@@ -93,6 +93,10 @@ header {
     color: #666;
 }
 
+#calendar-wrap header h1 {
+	padding: 15px;
+}
+
 /* ============================
                 Mobile Responsiveness
    ============================*/
