--- a/css/main.css
+++ b/css/main.css
@@ -36,10 +36,15 @@ input[type="text"] {
 	height: 0px;
 }
 
+.wheel-loader-wrap {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
+
 .wheel-loader {
-        position: absolute;
-        left: 50%;
-        top: 48px;
+        display: inline-block;
+	vertical-align: middle;
         transform: translate(-50%, 0) rotate(0deg);
         -webkit-transform: translate(-50%, 0);
         width: 25px;
@@ -48,14 +53,9 @@ input[type="text"] {
         border-radius: 50%;
         border-top-color: #1e1;
         animation: wheel-spin 2s linear infinite;
-        opacity: 0;
         transition: border-top-color 0.5s, opacity 0.4s;
         -webkit-transition: border-top-color 0.5s, opacity 0.4s;
         transition-delay: 0.56s;
-}
-
-.wheel-loader.enabled {
-	opacity: 1;
 }
 
 @keyframes wheel-spin {
