--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,8 @@ input[type="text"] {
 .wheel-loader {
         display: inline-block;
 	vertical-align: middle;
-        transform: translate(-50%, 0) rotate(0deg);
-        -webkit-transform: translate(-50%, 0);
+        transform: rotate(0deg);
+	-webkit-transform: rotate(0deg);
         width: 25px;
         height: 25px;
         border: 6px solid #111;
@@ -60,23 +60,23 @@ input[type="text"] {
 
 @keyframes wheel-spin {
         0% {
-                transform: translate(-50%, 0) rotate(0deg);
-                -webkit-transform: translate(-50%, 0) rotate(0deg);
+                transform: rotate(0deg);
+                -webkit-transform: rotate(0deg);
                 border-top-color: #1e1;
         }
         33% {
-                transform: translate(-50%, 0) rotate(360deg);
-                -webkit-transform: translate(-50%, 0) rotate(360deg);
+                transform: rotate(360deg);
+                -webkit-transform: rotate(360deg);
                 border-top-color: #11e;
         }
         67% {
-                transform: translate(-50%, 0) rotate(720deg);
-                -webkit-transform: translate(-50%, 0) rotate(720deg);
+                transform: rotate(720deg);
+                -webkit-transform: rotate(720deg);
                 border-top-color: #e11;
         }
         100% {
-                transform: translate(-50%, 0) rotate(360deg);
-                -webkit-transform: translate(-50%, 0) rotate(1080deg);
+                transform: rotate(1080deg);
+                -webkit-transform: rotate(1080deg);
                 border-top-color: #1e1;
         }
 }
