--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,9 @@ input[type="text"] {
 }
 
 .wheel-loader-wrap {
-	width: 100%;
-	height: 100%;
-	text-align: center;
+	position: absolute;
+	left: 50%;
+	top: 50%;
 }
 
 .wheel-loader {
