--- a/css/navbar.css
+++ b/css/navbar.css
@@ -36,9 +36,15 @@
 	padding: 5px;
 }
 
+.top-navbar-li.title {
+	float: left;
+}
+
 .top-navbar-li.picture img {
 	height: 100%;
 	width: auto;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .top-navbar-li a {
