--- a/css/navbar.css
+++ b/css/navbar.css
@@ -41,15 +41,14 @@
 }
 
 .top-navbar-li.picture img {
-	height: 100%;
+	height: 40px;
 	width: auto;
-	display: table-cell;
+	display: inline-block;
 	vertical-align: middle;
-	margin: auto;
 }
 
 .navbar-tall .top-navbar-li.picture img {
-	margin: 0px;
+	height: 70px;
 }
 
 .top-navbar-li a {
@@ -73,4 +72,27 @@
 	text-decoration: none;
  	color: #ab89e6;
 	cursor: pointer;
+}
+
+@media (max-width: 1000px;) {
+
+	 .navbar {
+                height: 70px;
+                position: absolute;
+        }
+
+        .navbar .top-navbar-li.picture img {
+                height: 60px;
+        }
+
+        .navbar-tall {
+                height: 70px;
+        }
+}
+
+@media (max-width: 650px) {
+
+        .top-navbar-li-collapse {
+                display: none;
+        }
 }
