--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ input[type="text"] {
 }
 
 .img-wrap {
+        display: inline-block;
 	text-align: center;
 	padding: 10px;
 	margin-bottom: 20px;
